--- a/src/sass/_pages.sass
+++ b/src/sass/_pages.sass
@@ -10,6 +10,8 @@
 		font-size: 42px
 		background: #f4f5f1
 		+bold
+		&::-webkit-search-cancel-button
+			cursor: pointer
 	&__btn
 		position: absolute
 		top: 50%
