--- a/src/sass/_common.sass
+++ b/src/sass/_common.sass
@@ -111,7 +111,7 @@ $mint: #9bc1bc
 	padding: 0 15px
 	margin: 0 auto
 	&_search
-		padding: 40px 0
+		padding: 40px 15px
 	&_news
 		padding: 90px 15px 20px
 	+r1
@@ -158,6 +158,8 @@ $mint: #9bc1bc
 		width: 33.33%
 	+r2
 		width: 50%
+	+r3
+		width: 100%
 
 strong, b
 	font-weight: 400
@@ -191,22 +193,22 @@ a
 	text-transform: uppercase
 	color: #282828
 	position: relative
-	padding: 7px 18px 6px
+	padding: 8px 18px 7px
 	font-size: 11px
-	+tr(color .3s)
 	z-index: 1
+	+tr(color .3s)
 	&_bd
 		border: 1px solid #333
 	&:before
 		content: ''
 		position: absolute
 		left: 0
-		top: -1px
-		bottom: -1px
+		top: 0
+		bottom: 0
 		width: 5px
 		background: #333
-		+tr(width .3s)
 		z-index: -1
+		+tr(width .3s)
 	&:hover
 		color: #fff
 		&:before
@@ -338,6 +340,7 @@ a
 			max-height: 0
 			padding: 0 15px
 			color: #FFF
+			overflow: hidden
 		&.item_gold
 			.item__img:hover
 				&:before
@@ -487,14 +490,34 @@ a
 			.item__txt
 				font-size: 20px
 				line-height: 23px
+	+r2
+		&.item_mod
+			.item__img:hover
+				.item__info
+					max-height: 100px
 	+r3
-		&.item_big
-			height: auto
+		max-width: 320px
+		margin: 0 auto 30px
+		height: 370px
+		.item__img
+			height: 222px
+		.item__txt
+			height: 150px
+		&.item_mod
 			.item__img
-				height: 232px
+				height: 217px
+				&:hover
+					.item__info
+						max-height: 80px
+			.item__txt
+				font-size: 19px
+		&.item_big
+			height: 370px
 			.item__txt
 				position: static
 				height: auto
+		.man
+			display: none
 
 .man
 	text-align: left
@@ -516,36 +539,3 @@ a
 		overflow: hidden
 		img
 			max-width: 100%
-
-// .subscribe
-// 	> .text-big
-// 		margin-bottom: 20px
-// 	&__field
-// 		border: 1px solid #9bc1bc
-// 		padding: 4px 4px 4px 20px
-// 		+clr
-// 		.button
-// 			float: right
-// 	&__input
-// 		overflow: hidden
-// 		color: #282828
-// 		position: relative
-// 		input
-// 			+regi
-// 			padding: 12px 10px 9px 35px
-// 			font-size: 17px
-// 			width: 100%
-// 			line-height: 40px
-// 			height: 40px
-// 			+placeholder
-// 				color: inherit
-// 		.fa
-// 			color: #9bc1bc
-// 			font-size: 24px
-// 			display: inline-block
-// 			vertical-align: middle
-// 			position: absolute
-// 			left: 0
-// 			top: 50%
-// 			margin-top: -12px
-
