--- a/src/sass/_inner.sass
+++ b/src/sass/_inner.sass
@@ -23,9 +23,12 @@ $green: #9bc1bc
 	margin-bottom: 20px
 
 .meta
+	display: inline-block
 	+reg
 	font-size: 11px
 	color: #b7b7b7
+	+r2
+		display: block
 
 .divider
 	height: 1px
@@ -119,7 +122,7 @@ $green: #9bc1bc
 
 // sidebar
 .banner-img
-	padding: 45px 25px
+	padding: 50px 25px
 	border: 1px solid #e6e6e6
 	text-align: center
 	margin-bottom: 20px
