--- a/src/sass/_inner.sass
+++ b/src/sass/_inner.sass
@@ -92,6 +92,11 @@ $green: #9bc1bc
 
 // news
 .news-header
+	&__subtitle
+		margin-bottom: 10px
+		font-size: 30px
+		color: #9bc1bc
+		+bold
 	h1, .h1
 		margin-bottom: 20px
 	.text-big
@@ -154,3 +159,41 @@ $green: #9bc1bc
 .disqus
 	display: block
 	max-width: 100%
+
+.footnote
+	padding-top: 20px
+	text-align: center
+	border-top: 4px solid #9bc1bc
+	&_mod
+		margin-left: 108px
+	span
+		color: #9BC1BC
+	+r2
+		margin-left: 80px
+	+r3
+		margin-left: 0
+
+.download
+	display: block
+	margin: 27px 0 35px
+	padding: 13px 22px
+	font-size: 18px
+	color: #000
+	border: 1px solid #9BC1BC
+	&_mod
+		margin-left: 108px
+	.fa
+		margin-right: 18px
+		font-size: 24px
+		color: #9BC1BC
+		vertical-align: middle
+	span
+		vertical-align: middle
+	+r2
+		margin-left: 80px
+	+r3
+		margin-left: 0
+		padding: 13px
+		text-align: center
+		span
+			display: block
