--- a/src/sass/_header.sass
+++ b/src/sass/_header.sass
@@ -24,7 +24,7 @@ body
 		padding: 0 70px 0 165px 
 	+r2
 		min-height: 60px
-		padding: 0 55px 0 115px 
+		padding: 0 45px 0 0 
 	&__inner
 		margin: 0 auto
 		max-width: 1290px
@@ -38,8 +38,8 @@ body
 	background: #fff 
 	min-width: 70px
 	+r2
-		padding: 17px 15px 16px 10px 
-		min-width: 55px
+		padding: 17px 15px 16px 10px
+		min-width: 45px
 	&__input
 		border-bottom: 4px solid rgba(#282828, 0.15)
 		color: #282828  
@@ -61,9 +61,9 @@ body
 		right: 25px
 		cursor: pointer
 		+r2
-			top: 17px
+			top: 19px
 			right: 15px
-			font-size: 25px
+			font-size: 20px
 
 .logo
 	+bold
@@ -76,9 +76,12 @@ body
 	left: 25px
 	padding: 13px 0 7px
 	+r2
-		top: 5px
-		left: 15px
+		top: 0
+		left: 50%
 		padding: 13px 0 7px 
+		width: 130px
+		text-align: center
+		margin-left: -65px
 	&__orange
 		color: #ff8c61
 		margin-right: -9px
@@ -88,13 +91,11 @@ body
 		vertical-align: top
 		font-size: 40px
 		position: relative
-		+r2
-			font-size: 30px 
 
 .btn-nav
 	float: left
-	width: 28px
-	height: 21px
+	width: 26px
+	height: 22px
 	position: relative
 	cursor: pointer
 	margin: 20px 10px 0
@@ -114,11 +115,11 @@ body
 			opacity: 0
 			transition: opacity 0.2s
 	&:before, &:after, span
-		border-bottom: 3px solid #282828
+		border-bottom: 4px solid #282828
 		width: 100%
 		position: absolute
 		left: 50%
-		margin-left: -14px 
+		margin-left: -13px 
 	&:before, &:after
 		content: ""
 		transition: transform 0.2s, top 0.2s 0.2s
@@ -143,7 +144,9 @@ body
 	margin: 21px 0 
 	min-height: 37px
 	+r2
-		margin: 14px 0 10px 
+		padding: 0
+		margin: 17px 0 0 
+		min-height: 1px 
 	i
 		font-size: 37px
 		position: absolute
@@ -151,7 +154,9 @@ body
 		left: 0
 		margin-top: -19px
 		+r2
-			font-size: 32px
+			font-size: 26px
+			position: static
+			margin: 0 
 	span
 		+r2
 			display: none
