--- a/src/sass/_main.sass
+++ b/src/sass/_main.sass
@@ -745,6 +745,13 @@
 	font-size: 18px
 	line-height: 21px
 	position: relative
+	cursor: pointer
+	&.is-active
+		.select
+			&__list
+				display: block
+		i
+			transform: rotate(180deg)
 	select
 		position: absolute
 		top: 0
@@ -756,8 +763,10 @@
 		opacity: 0
 	&__text
 		+regi
-		padding: 12px 14px 11px
+		padding: 12px 35px 11px 14px
 		border: 1px solid #ff8c61
+		position: relative
+		z-index: 1
 	i
 		position: absolute
 		top: 50%
@@ -765,3 +774,140 @@
 		font-size: 14px
 		margin-top: -7px
 		color: #ff8c61 
+	&__list
+		position: absolute
+		top: 100%
+		left: 0
+		right: 0
+		background: #fff
+		+reg
+		padding: 19px 18px 12px 14px 
+		display: none
+		border: 1px solid #ff8c61
+		border-top: none
+		z-index: 200 
+		li
+			padding: 10px 0
+			border-top: 1px solid #e5e5e5
+			&:first-child
+				border-top: none
+
+.main-head
+	+light
+	padding: 60px 15px 115px
+	position: relative
+	+r2
+		padding: 20px 15px 
+	&__info
+		max-width: 620px
+		width: 40%
+		position: relative
+		z-index: 1
+		+r1
+			width: 43%
+		+r2
+			width: 100%
+	&__title
+		font-size: 46px
+		line-height: 54px
+		margin-bottom: 25px
+		+r2
+			font-size: 38px
+			line-height: 1.1
+			margin-bottom: 15px
+	p
+		font-size: 22px
+		line-height: 26px
+		color: #0e0e0e
+		+r2
+			font-size: 20px
+			line-height: 25px
+	&__img
+		position: absolute
+		top: 0
+		bottom: 0
+		right: 0
+		width: 63%
+		background-position: right center
+		background-repeat: no-repeat
+		+r1
+			width: 70% 
+			background-size: contain
+		+r2
+			width: 100%
+			padding-bottom: 40%
+			position: relative
+			background-position: center 
+
+.fullscreen
+	min-height: 100vh
+	display: table
+	width: 100%
+	position: relative
+	color: #fff 
+	+r2
+		display: block
+		min-height: 1px 
+	&:before, &:after
+		position: absolute
+		content: "" 
+	&:before
+		top: 0
+		left: 0
+		right: 0
+		bottom: 0
+		background-image: linear-gradient(180deg, rgba(30, 18, 27, 0.3) 0%, rgba(27, 16, 24, 0.66) 100%)
+	&:after
+		top: 27px
+		left: 21px
+		right: 21px
+		bottom: 30px
+		border: 1px solid
+		+r2
+			display: none
+	&_yellow
+		&:after
+			border-color: $gold 
+	&__inner
+		display: table-cell
+		vertical-align: bottom
+		position: relative
+		z-index: 1
+		+r2
+			display: block
+			vertical-align: top
+	&__center
+		max-width: 1110px
+		margin: 0 auto
+		padding: 75px 30px 75px
+		+r2
+			padding: 30px 
+	.slider
+		margin: 0 auto 60px
+		background-image: linear-gradient(180deg, rgba(55, 33, 49, 0.6) 0%, rgba(53, 31, 47, 0.8) 100%) 
+		&__prev, &__next
+			background: rgba(53, 31, 47, 1)
+			&:hover
+				background: $gold 
+	.slide
+		position: relative
+	&__title
+		+bold
+		font-size: 64px
+		line-height: 72px
+		margin-bottom: 15px
+		+r1
+			font-size: 52px
+			line-height: 1.2
+		+r2
+			font-size: 28px
+			line-height: 1
+	p
+		font-size: 18px
+		line-height: 24px
+		+light
+		+r2
+			font-size: 16px
+			line-height: 22px
+	&__info
+		text-align: center
