--- a/src/sass/_common.sass
+++ b/src/sass/_common.sass
@@ -394,8 +394,14 @@ a
 			padding-top: 0
 		.item__img
 			height: 510px
-		.item__name
-			font-size: 56px
+		.item__title
+			.item__subtitle
+				font-size: 56px
+				line-height: 1.2
+				margin-bottom: 10px
+				+r3
+					font-size: 23px
+					line-height: 27px
 	&__in
 		display: block 
 	&__img
