--- a/src/sass/_common.sass
+++ b/src/sass/_common.sass
@@ -203,6 +203,12 @@ h1, .h1
 	line-height: 1
 	+med
 
+.h4
+	font-size: 32px
+	+bold
+	+r3
+		font-size: 22px
+
 a
 	color: #000
 	text-decoration: none
@@ -397,7 +403,7 @@ a
 		.item__name
 			font-size: 56px
 	&__in
-		display: block 
+		display: block
 	&__img
 		position: relative
 		display: block
