--- a/src/sass/_inner.sass
+++ b/src/sass/_inner.sass
@@ -11,6 +11,10 @@ $green: #9bc1bc
 	+med
 	&_md
 		font-size: 20px
+	&_reg
+		font-size: 22px
+		line-height: 1.3
+		+reg
 	+r3
 		font-size: 20px
 		&_md
@@ -112,6 +116,7 @@ $green: #9bc1bc
 
 // news
 .news-header
+	font-family: 'Fira Sans', Helvetica, Arial, sans-serif
 	&__subtitle
 		margin-bottom: 10px
 		font-size: 30px
@@ -220,7 +225,10 @@ $green: #9bc1bc
 
 .fullheight
 	position: relative
-	height: 100vh
+	display: table
+	width: 100%
+	min-height: 100vh
+	z-index: 0
 	+cover
 	&:before
 		content: ""
@@ -229,7 +237,56 @@ $green: #9bc1bc
 		left: 0
 		right: 0
 		bottom: 0
+		z-index: -1
 		+g(rgba(30, 18, 27, 0.3), rgba(27, 16, 24, 0.66))
+	&__in
+		height: 100%
+		display: table-cell
+		padding: 100px 0 68px
+		color: #FFF
+		vertical-align: bottom
+	&__bl
+		max-width: 1290px
+		margin: 0 auto
+		padding: 0 110px
+	&__el
+		width: 70%
+	.btn
+		background: #FFF
+	.news-line
+		margin: 0 0 22px
+	.news-line__info
+		color: #FFF
+	.h1
+		font-size: 90px
+		line-height: 1
+	.text-big
+		font-size: 32px
+		line-height: 1.1
+	+r1
+		&__bl
+			max-width: 1100px
+			padding: 0 70px
+		&__el
+			width: 65.5%
+		.h1
+			font-size: 70px
+	+r5
+		&__bl
+			padding: 0 15px
+	+r2
+		min-height: 500px
+		&__in
+			padding-bottom: 10px
+		&__bl
+			max-width: 660px
+		&__el
+			width: 100%
+		.h1
+			font-size: 40px
+		.text-big
+			font-size: 20px
+
 
 // slider on inner pages
 .inner-slider
@@ -240,10 +297,11 @@ $green: #9bc1bc
 		li
 			margin: 0 5px
 			&.slick-active button
-				background: $mint
+				background: #FFF
 		button
 			width: 12px
 			height: 12px
+			background: $mint
 	&__prev,
 	&__next
 		position: absolute
@@ -276,3 +334,58 @@ $green: #9bc1bc
 				width: 8px
 				height: 8px
 
+.list-links
+	margin: 53px 0 43px
+	&__bl
+		position: relative
+		display: block
+		padding: 35px 15px
+		background: rgba(#eff0ea, 0.5)
+		border-bottom: 1px solid $mint
+		transition: background 0.2s ease
+		&:hover
+			background: #eff0ea
+		&:last-child
+			border-bottom: none
+	&__more
+		margin-top: 15px
+		font-family: 'Fira Sans', Helvetica, Arial, sans-serif
+		font-size: 16px
+		font-weight: 500
+		color: $mint
+	.man
+		max-width: 575px
+		margin: 0 auto
+		font-size: 18px
+		font-family: 'Fira Sans', Helvetica, Arial, sans-serif
+		p
+			margin-bottom: 0
+	.man__img
+		vertical-align: top
+	.man__text
+		color: #000
+	.h4
+		font-family: 'Fira Sans', Helvetica, Arial, sans-serif
+	.fa-angle-right
+		position: absolute
+		top: 50%
+		right: 30px
+		margin-top: -32px
+		font-size: 64px
+		line-height: 1
+		color: $mint
+	+r3
+		.man
+			max-width: initial
+		.fa-angle-right
+			display: none
+
+.expand
+	position: relative
+	margin-bottom: 20px
+	.fa
+		position: absolute
+		top: 20px
+		right: 20px
+		font-size: 30px
+		color: #FFF
