--- a/src/sass/_inner.sass
+++ b/src/sass/_inner.sass
@@ -240,7 +240,7 @@ $green: #9bc1bc
 		z-index: -1
 		+g(rgba(30, 18, 27, 0.3), rgba(27, 16, 24, 0.66))
 	&__in
-		height: 100%
+		height: 100vh
 		display: table-cell
 		padding: 100px 0 68px
 		color: #FFF
@@ -383,7 +383,10 @@ $green: #9bc1bc
 .expand
 	position: relative
 	margin-bottom: 20px
-	.fa
+	&__img
+		display: block
+		max-width: 100%
+	&__link
 		position: absolute
 		top: 20px
 		right: 20px
