--- a/src/partials/header-main.html
+++ b/src/partials/header-main.html
@@ -1,5 +1,5 @@
 <a href="#" class="top-banner" style="background-image: url(img/top-banner.jpg);"></a>
-<header class="header js-header">
+<header class="header">
 	<div class="header__fixed">
 		<a href="#" class="logo">
 			<span class="logo__orange">Dis</span>
