--- a/src/sass/_header.sass
+++ b/src/sass/_header.sass
@@ -14,17 +14,29 @@ body
 		display: none
 
 .header
-	position: relative
-	background-color: #fff
-	box-shadow: 0 2px 6px rgba(159, 159, 159, 0.5)
-	padding: 0 200px
-	min-height: 80px
-	z-index: 10
-	+r1
-		padding: 0 70px 0 165px 
-	+r2
-		min-height: 60px
-		padding: 0 45px 0 0 
+	&.is-fixed
+		.header__fixed
+			position: fixed
+			top: 0
+			left: 0
+			width: 100%
+	&.is-hidden
+		.header__fixed
+			transform: translateY(-110%)
+	&__fixed
+		transition: transform 0.4s
+		padding: 0 200px
+		background-color: #fff
+		box-shadow: 0 2px 6px rgba(159, 159, 159, 0.5)
+		min-height: 80px
+		z-index: 300
+		min-width: 320px
+		position: relative
+		+r1
+			padding: 0 70px 0 165px 
+		+r2
+			min-height: 60px
+			padding: 0 45px 0 0 
 	&__inner
 		margin: 0 auto
 		max-width: 1290px
